--- a/config.json
+++ b/config.json
@@ -2,6 +2,35 @@
   "title": "For Elecom Trackball",
   "rules": [
     {
+      "description": "Button 3 for Mission Control",
+      "manipulators": [
+        {
+          "type": "basic",
+          "from": {
+            "pointing_button": "button3"
+          },
+          "to": [
+            {
+              "key_code": "up_arrow",
+              "modifiers": "left_control"
+            }
+          ]
+        },
+        {
+          "type": "basic",
+          "from": {
+            "pointing_button": "button7"
+          },
+          "to": [
+            {
+              "key_code": "right_arrow",
+              "modifiers": "left_control"
+            }
+          ]
+        }
+      ]
+    },
+    {
       "description": "Swipe Full-Screen Apps",
       "manipulators": [
         {
